# aecert-hexapod

./: README.md
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json
aecert_hexapod/: CMakeLists.txt  package.xml
aecert_hexapod_control/: CMakeLists.txt  package.xml
aecert_hexapod_control/config/: aecert_hexapod_controller.yaml
aecert_hexapod_control/config/xacro_controls/: coxa_joint_control.xacro  femur_joint_control.xacro  leg_joint_control.xacro  tibia_joint_control.xacro
aecert_hexapod_control/include/: README.md
aecert_hexapod_control/launch/: controller.launch.py
aecert_hexapod_control/src/: README.md
aecert_hexapod_description/: CMakeLists.txt  package.xml
aecert_hexapod_description/meshes/: base.stl  coxa.stl  femur.stl  tibia.stl
aecert_hexapod_description/urdf/: common_properties.xacro  coxa.xacro  femur.xacro  hexapod.urdf.xacro  leg.xacro  tibia.xacro
aecert_hexapod_sim/: CMakeLists.txt  package.xml
aecert_hexapod_sim/env-hooks/: aecert_hexapod_sim.dsv.in
aecert_hexapod_sim/include/aecert_hexapod_gazebo/: aecert_hexapod_drive.hpp
aecert_hexapod_sim/launch/: empty_world.launch.py  hexapod.launch.py
aecert_hexapod_sim/models/: hexapod.ros2_control.xacro
aecert_hexapod_sim/models/aecert_hexapod/: model.config  model.sdf
aecert_hexapod_sim/rviz/: README.md
aecert_hexapod_sim/src/: aecert_hexapod_drive.cpp
