<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aecert_hexapod_control</name>
  <version>0.1.0</version>
  <description>Control package for Aecert Hexapod package</description>
  <maintainer email="timmaxgibson@gmail.com">Tim Gibson</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>